--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.54.2",
     "@types/node": "^24.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1"
   }
 }
