--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BASE_URL=https://www.saucedemo.com
-USERID=standard_user
-PASSWORD=secret_sauce
+BASE_URL=https://bolt.playrealbrokerage.com/login
+USERID=sahilagent
+PASSWORD=P@ssw0rd
